# ai-architect_prompt_engineering

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml
profiles/: advanced.yaml  default.yaml
src/prompt_engineering/: config.py  main.py
src/prompt_engineering/agents/: __init__.py  react_agent.py
src/prompt_engineering/eval/: __init__.py  benchmark.py  evaluator.py  metrics.py
src/prompt_engineering/optimization/: __init__.py  debugger.py  meta_prompter.py
src/prompt_engineering/prompts/: __init__.py  loader.py
src/prompt_engineering/prompts/meta_prompts/: tutor_v1_initial.md  tutor_v2_refined.md  tutor_v3_meta.md
src/prompt_engineering/prompts/react_prompts/: react_system.md  self_reflection.md
src/prompt_engineering/security/: __init__.py  output_filter.py  sanitiser.py
src/prompt_engineering/services/: __init__.py  batch_processor.py  llm_client.py
src/prompt_engineering/tools/: __init__.py  base.py  grammar.py  notes.py  quiz.py  vocabulary.py
